--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "hamburger-react": "^2.5.2",
     "icofont": "^1.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
