--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.7",
     "hamburger-react": "^2.5.2",
     "icofont": "^1.0.0",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
