--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
+
 {
   "name": "portfolio",
+  "homepage":"https://Kristal0024.github.io/React-vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,10 +9,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "hamburger-react": "^2.5.2",
     "icofont": "^1.0.0",
     "locomotive-scroll": "^5.0.0-beta.21",
@@ -27,6 +31,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
   }
